--- a/Computer Systems, A Programmer's Perspective/labmalloc/Makefile
+++ b/Computer Systems, A Programmer's Perspective/labmalloc/Makefile
@@ -6,7 +6,7 @@ VERSION = 1
 HANDINDIR = /afs/cs.cmu.edu/academic/class/15213-f01/malloclab/handin
 
 CC = gcc
-CFLAGS = -g -Wall -Og -m64
+CFLAGS = -Wall -O2 -m64
 
 OBJS = mdriver.o mm.o memlib.o fsecs.o fcyc.o clock.o ftimer.o
 
