ostep/cd: Add timex tests

--- a/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
+++ b/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 project(concurrent_ds C)
-
 set(CMAKE_C_STANDARD 99)
 
-add_executable(concurrent_ds main.c includes/timex.c test/ctest/assert_macro.h)
+enable_testing()
+add_subdirectory(test/ctest)
