--- a/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
+++ b/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
@@ -1,6 +1,13 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.24)
 project(concurrent_ds C)
 set(CMAKE_C_STANDARD 99)
 
+add_subdirectory(src/lib/timex)
+add_subdirectory(src/lib/ccounter)
+
+add_executable(q2 src/q2.c)
+target_link_libraries(q2 PUBLIC timex ccounter)
+target_include_directories(q2 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
+
 enable_testing()
-add_subdirectory(test/ctest)
+add_subdirectory(test)
