ostep/cd Complete question 4

--- a/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
+++ b/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_C_STANDARD 99)
 add_subdirectory(src/lib/timex)
 add_subdirectory(src/lib/ccounter)
 add_subdirectory(src/lib/acounter)
+add_subdirectory(src/lib/glinkedlist)
+add_subdirectory(src/lib/util)
 
 add_executable(q2 src/q2.c)
 target_link_libraries(q2 PUBLIC timex ccounter)
@@ -12,6 +14,10 @@ target_include_directories(q2 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 
 add_executable(q3 src/q3.c)
 target_link_libraries(q3 PUBLIC timex acounter)
+target_include_directories(q2 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
+
+add_executable(q4 src/q4.c)
+target_link_libraries(q4 PUBLIC timex glinkedlist util)
 target_include_directories(q2 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 
 enable_testing()
