--- a/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
+++ b/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
@@ -21,5 +21,9 @@ add_executable(q4 src/q4.c)
 target_link_libraries(q4 PUBLIC timex glinkedlist util)
 target_include_directories(q2 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 
+add_executable(ch31_1 src/ch31_1.c)
+target_link_libraries(ch31_1 PUBLIC zem)
+target_include_directories(ch31_1 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
+
 enable_testing()
 add_subdirectory(test)
