ostep/ch31: Complete question 5 with solution 2
Include a bare implementation for first-come, first-served reader-writer
lock.

--- a/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
+++ b/Operating Systems, Three Easy Pieces/concurrent-ds/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(src/lib/acounter)
 add_subdirectory(src/lib/glinkedlist)
 add_subdirectory(src/lib/util)
 add_subdirectory(src/lib/zem)
+add_subdirectory(src/lib/rwline)
 
 add_executable(q2 src/q2.c)
 target_link_libraries(q2 PUBLIC timex ccounter)
@@ -38,8 +39,12 @@ target_link_libraries(ch31_4 PUBLIC zem)
 target_include_directories(ch31_4 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 
 add_executable(ch31_5_1 src/ch31_5_1.c)
-target_link_libraries(ch31_5_1 PUBLIC zem)
+target_link_libraries(ch31_5_1 PUBLIC zem util)
 target_include_directories(ch31_5_1 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
+
+add_executable(ch31_5_2 src/ch31_5_2.c)
+target_link_libraries(ch31_5_2 PUBLIC rwline util)
+target_include_directories(ch31_5_2 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 
 enable_testing()
 add_subdirectory(test)
