idaa/ch1: Complete exercise 1.1.5

--- a/Introduction to the Design and Analysis of Algorithms/src/ch1/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/src/ch1/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_library(ch1 ex1.1.4.c)
+add_library(ch1
+        ex1.1.4.c
+        ex1.1.5.c)
 target_include_directories(ch1 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
