--- a/Introduction to the Design and Analysis of Algorithms/tests/ch1/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/tests/ch1/CMakeLists.txt
@@ -1,6 +1,7 @@
 create_test_sourcelist(ch1_tests
         ch1_tests.c
-        test_ex114.c)
+        test_ex114.c
+        test_ex115.c)
 
 add_executable(ch1_tests ${ch1_tests})
 target_link_libraries(ch1_tests PUBLIC ch1)
