--- a/Introduction to the Design and Analysis of Algorithms/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/CMakeLists.txt
@@ -3,6 +3,7 @@ project(idaa C)
 set(CMAKE_C_STANDARD 90)
 
 add_subdirectory(src/ch1)
+add_subdirectory(src/ch2)
 
 enable_testing()
 add_subdirectory(tests)
