--- a/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(ex511 ex5.1.1.c)
 add_executable(ex513 ex5.1.3.c)
 add_executable(ex519 ex5.1.9.c)
+add_executable(quicksort quicksort.c)
