idaa/ch5: Complete exercise 5.2.8

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
+*.o
+.DS_Store
 .bsp
+.cache
 .classpath
 .cmake
-.DS_Store
 .grader
 .idea
 .metals
 .project
 .settings
 .vscode
-*.o
 a.out
 bin
 build
