--- a/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
@@ -2,3 +2,6 @@ add_executable(ex511 ex5.1.1.c)
 add_executable(ex513 ex5.1.3.c)
 add_executable(ex519 ex5.1.9.c)
 add_executable(quicksort quicksort.c)
+add_executable(ex528 ex5.2.8.c)
+target_include_directories(ex528 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
+target_link_libraries(ex528 PUBLIC common)
