idaa/ch5: Complete exercise 5.2.9

--- a/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
@@ -5,3 +5,6 @@ add_executable(quicksort quicksort.c)
 add_executable(ex528 ex5.2.8.c)
 target_include_directories(ex528 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 target_link_libraries(ex528 PUBLIC common)
+add_executable(ex529 ex5.2.9.c)
+target_include_directories(ex529 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
+target_link_libraries(ex529 PUBLIC common)
