idaa/ch5: Complete exercise 5.3.3

--- a/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
+++ b/Introduction to the Design and Analysis of Algorithms/src/ch5/CMakeLists.txt
@@ -8,3 +8,4 @@ target_link_libraries(ex528 PUBLIC common)
 add_executable(ex529 ex5.2.9.c)
 target_include_directories(ex529 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
 target_link_libraries(ex529 PUBLIC common)
+add_executable(ex533 ex5.3.3.c)
