--- a/clibc/tests/clibc_array/CMakeLists.txt
+++ b/clibc/tests/clibc_array/CMakeLists.txt
@@ -1,7 +1,8 @@
 create_test_sourcelist(clibc_array_tests
     clibc_array_tests.c
     test_clibc_array_new.c
-    test_clibc_array_add_get.c)
+    test_clibc_array_add_get.c
+    test_clibc_array_rm.c)
 
 add_executable(clibc_array_tests ${clibc_array_tests})
 target_link_libraries(clibc_array_tests PUBLIC clibc_array)
