clibc/map: Implement new

--- a/clibc/CMakeLists.txt
+++ b/clibc/CMakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required(VERSION 3.25)
 project(clibc C)
 set(CMAKE_C_STANDARD 90)
 
-add_library(clibc_array src/clibc_array.c)
-target_include_directories(clibc_array PUBLIC src/includes)
-add_library(clibc_linkedlist src/clibc_linkedlist.c)
-target_include_directories(clibc_linkedlist PUBLIC src/includes)
+add_library(clibc
+    src/clibc_array.c
+    src/clibc_linkedlist.c
+    src/clibc_map.c)
+target_include_directories(clibc PUBLIC src/includes)
 
 enable_testing()
 add_subdirectory(tests)
