--- a/clibc/CMakeLists.txt
+++ b/clibc/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_C_STANDARD 90)
 add_library(clibc
     src/clibc_array.c
     src/clibc_linkedlist.c
-    src/clibc_map.c)
+    src/clibc_map.c
+    src/clibc_graph.c)
 target_include_directories(clibc PUBLIC src/includes)
 
 enable_testing()
