clibc/algs: Impl incd_edges

--- a/clibc/CMakeLists.txt
+++ b/clibc/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(clibc
     src/clibc_array.c
     src/clibc_linkedlist.c
     src/clibc_map.c
-    src/clibc_graph.c)
+    src/graph.c)
 target_include_directories(clibc PUBLIC src/includes)
 
 enable_testing()
