--- a/clibc/tests/CMakeLists.txt
+++ b/clibc/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(clibc_array)
 add_subdirectory(clibc_linkedlist)
 add_subdirectory(clibc_map)
-add_subdirectory(clibc_graph)
+add_subdirectory(graph)
