clibc/algs: Rename

--- a/clibc/CMakeLists.txt
+++ b/clibc/CMakeLists.txt
@@ -3,9 +3,9 @@ project(clibc C)
 set(CMAKE_C_STANDARD 90)
 
 add_library(clibc
-    src/clibc_array.c
-    src/clibc_linkedlist.c
-    src/clibc_map.c
+    src/array.c
+    src/linkedlist.c
+    src/map.c
     src/graph.c)
 target_include_directories(clibc PUBLIC src/includes)
 
