libcc: Impl nqueens

--- a/libcc/CMakeLists.txt
+++ b/libcc/CMakeLists.txt
@@ -10,7 +10,8 @@ add_library(cc
     src/pqueue.c
     src/graph.c
     src/algs/graph.c
-    src/algs/str.c)
+    src/algs/str.c
+    src/algs/np.c)
 target_include_directories(cc PUBLIC src/includes)
 
 enable_testing()
