--- a/libcc/tests/CMakeLists.txt
+++ b/libcc/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(pqueue)
 add_subdirectory(graph)
 add_subdirectory(algs/graph)
 add_subdirectory(algs/str)
+add_subdirectory(algs/np)
