--- a/xv6/.gitignore
+++ b/xv6/.gitignore
@@ -1,24 +1,25 @@
-*~
 _*
-*.o
-*.d
+.gdbinit
+.vagrant/
+.vscode
+*-handin.tar.gz
 *.asm
-*.sym
+*.d
 *.img
-vectors.S
+*.o
+*.sym
+*~
+barrier
 bootblock
 entryother
 initcode
 initcode.out
+kernel/kernel
 kernelmemfs
 mkfs
-kernel/kernel
-user/usys.S
-.gdbinit
 myapi.key
-*-handin.tar.gz
-xv6.out*
-.vagrant/
-submissions/
 ph
-barrier
+submissions/
+user/usys.S
+vectors.S
+xv6.out*
