xv6/thread: Complete uthread

--- a/xv6/.gitignore
+++ b/xv6/.gitignore
@@ -11,6 +11,7 @@ _*
 *.sym
 *~
 barrier
+barrier.dSYM
 bootblock
 entryother
 initcode
@@ -20,6 +21,7 @@ kernelmemfs
 mkfs
 myapi.key
 ph
+ph.dSYM
 submissions/
 user/usys.S
 vectors.S
