stdc/ch0: Complete exercise 0.3

--- a/The Standard C Library/CMakeLists.txt
+++ b/The Standard C Library/CMakeLists.txt
@@ -13,7 +13,7 @@ add_compile_options(
         -Wall
         -Wextra
         -Wpedantic
-
+        # Suggested by ChatGPT
         -Wconversion
         -Wformat=2
         -Wmissing-prototypes
