--- a/Programming Problems/pom.xml
+++ b/Programming Problems/pom.xml
@@ -4,9 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cuongd.study</groupId>
-    <artifactId>leetcode</artifactId>
+    <artifactId>pp</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>leetcode</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
