stdc/ch2: Complete exercise 2.3

--- a/The Standard C Library/CMakeLists.txt
+++ b/The Standard C Library/CMakeLists.txt
@@ -1,26 +1,23 @@
-cmake_minimum_required(VERSION 4.0)
-
-project(TheStandardCLibrary C)
+cmake_minimum_required(VERSION 3.10)
+project(stdc VERSION 0.0.1 LANGUAGES C)
 set(CMAKE_C_STANDARD 90)
-set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_STANDARD_REQUIRED True)
 set(CMAKE_C_EXTENSIONS OFF)
 
-enable_testing()
-add_subdirectory(exercises)
-add_subdirectory(tests)
-
-add_compile_options(
-        -Wall
-        -Wextra
-        -Wpedantic
-        # Suggested by ChatGPT
-        -Wconversion
-        -Wformat=2
-        -Wmissing-prototypes
-        -Wnull-dereference
-        -Wold-style-definition
-        -Wshadow
-        -Wsign-conversion
-        -Wstrict-prototypes
-        -Wunreachable-code
+# sources
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
 )
+add_library(exercises OBJECT ${SOURCES})
+target_include_directories(exercises PUBLIC ${CMAKE_SOURCE_DIR}/include)
+
+# link libcc
+include_directories("/usr/local/include")
+link_directories("/usr/local/lib")
+target_link_libraries(exercises PRIVATE cc)
+
+# tests
+include(CTest)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
