aic/ch1: prog1_3.c

--- a/Algorithms in C/CMakeLists.txt
+++ b/Algorithms in C/CMakeLists.txt
@@ -7,3 +7,5 @@ add_executable(prog1_1)
 target_sources(prog1_1 PRIVATE src/ch1/prog1_1.c)
 add_executable(prog1_2)
 target_sources(prog1_2 PRIVATE src/ch1/prog1_2.c)
+add_executable(prog1_3)
+target_sources(prog1_3 PRIVATE src/ch1/prog1_3.c)
