cmake/ch4: Use FetchContent

--- a/The Standard C Library/CMakeLists.txt
+++ b/The Standard C Library/CMakeLists.txt
@@ -8,13 +8,18 @@ set(CMAKE_C_EXTENSIONS OFF)
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
   ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
 )
-add_library(exercises OBJECT ${SOURCES})
-target_include_directories(exercises PUBLIC ${CMAKE_SOURCE_DIR}/include)
+add_library(${PROJECT_NAME} OBJECT ${SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 # link libcc
-include_directories("/usr/local/include")
-link_directories("/usr/local/lib")
-target_link_libraries(exercises PRIVATE cc)
+include(FetchContent)
+FetchContent_Declare(
+  cc
+  GIT_REPOSITORY https://github.com/cuong-dang/libcc.git
+  GIT_TAG cmake
+)
+FetchContent_MakeAvailable(cc)
+target_link_libraries(${PROJECT_NAME} PRIVATE cc)
 
 # tests
 include(CTest)
