--- a/The Standard C Library/tests/CMakeLists.txt
+++ b/The Standard C Library/tests/CMakeLists.txt
@@ -5,6 +5,6 @@ file(GLOB TEST_SOURCES "test_*.c")
 foreach (test_file ${TEST_SOURCES})
   get_filename_component(test_name ${test_file} NAME_WE)
   add_executable(${test_name} ${test_file})
-  target_link_libraries(${test_name} PRIVATE exercises)
+  target_link_libraries(${test_name} PRIVATE ${PROJECT_NAME})
   add_test(NAME ${test_name} COMMAND ${test_name})
 endforeach ()
