aic/ch1: Exercise 1.20

--- a/Algorithms in C/CMakeLists.txt
+++ b/Algorithms in C/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(prog1_4)
 target_sources(prog1_4 PRIVATE src/ch1/prog1_4.c)
 add_executable(ex1_16)
 target_sources(ex1_16 PRIVATE src/ch1/ex1_16.c)
+add_executable(ex1_20)
+target_sources(ex1_20 PRIVATE src/ch1/ex1_20.c)
