aic/ch1: Complete chapter 1

--- a/Algorithms in C/CMakeLists.txt
+++ b/Algorithms in C/CMakeLists.txt
@@ -15,3 +15,7 @@ add_executable(ex1_16)
 target_sources(ex1_16 PRIVATE src/ch1/ex1_16.c)
 add_executable(ex1_20)
 target_sources(ex1_20 PRIVATE src/ch1/ex1_20.c)
+add_executable(ex1_22)
+target_sources(ex1_22 PRIVATE src/ch1/ex1_22.c)
+add_executable(ex1_23)
+target_sources(ex1_23 PRIVATE src/ch1/ex1_23.c)
